<resources>
    <string name="app_name">SchoterNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Schoter News</string>
    <string name="detail_fragment">Detail News</string>
    <string name="profile_fragment">Profile</string>
    <string name="imageArticle">imageArticle</string>
    <string name="search_article">Search Article</string>
    <string name="image">image</string>
    <string name="fragment_title">Fragment Title</string>
    <string name="author">Author</string>
    <string name="published_at">Published At</string>
    <string name="description">Description</string>
    <string name="description_article">Description Article</string>
    <string name="source_article">Source Article</string>
    <string name="title_article">Title Article</string>
    <string name="dev">Aditya Gocendra</string>
    <string name="ordinary_people">Ordinary people</string>
    <string name="contact">Contact</string>
    <string name="article_not_found">Article Not Found</string>
    <string name="bookmark">Bookmark</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="my_email">gocendra123@gmail.com</string>
    <string name="_62_897_5778_418">+62 897 5778 418</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="are_you_sure_delete_all_data_bookmark">Are you sure delete all data bookmark ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

</resources>