<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeFragment">


    <ProgressBar
        android:id="@+id/progressCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_not_found"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="0.5dp"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp">

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:hint="@string/search_article"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/background_button"
                    android:contentDescription="@string/imageArticle"
                    android:minWidth="32dp"
                    android:minHeight="32dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_search"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerNews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


</FrameLayout>